Add media query for desktop in about page

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,11 +1,9 @@
 <header class="header">
-  <div class="header__wrapper">
-    <!-- <h1 class="header__title">Natalia Migallón</h1> -->
-    <div class="hamburger">
-      <div class="_layer -top"></div>
-      <div class="_layer -mid"></div>
-      <div class="_layer -bottom"></div>
-    </div>
+  <!-- <h1 class="header__title">Natalia Migallón</h1> -->
+  <div class="hamburger">
+    <div class="_layer -top"></div>
+    <div class="_layer -mid"></div>
+    <div class="_layer -bottom"></div>
   </div>
   <nav class="header__nav">
     <ul>
@@ -27,6 +25,31 @@
       </li>
       <li>
         <a class="header__nav--contact" href="./contact.html" title="Contacto"
+          >Contacto</a
+        >
+      </li>
+    </ul>
+  </nav>
+  <nav class="header__nav2">
+    <ul>
+      <li>
+        <a class="header__nav2--home" href="./index.html" title="home">Home</a>
+      </li>
+      <li>
+        <a class="header__nav2--about" href="./about.html" title="Sobre mí"
+          >Sobre mí</a
+        >
+      </li>
+      <li>
+        <a
+          class="header__nav2--projects"
+          href="./projects.html"
+          title="Proyectos"
+          >Proyectos</a
+        >
+      </li>
+      <li>
+        <a class="header__nav2--contact" href="./contact.html" title="Contacto"
           >Contacto</a
         >
       </li>
