--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -17,7 +17,13 @@
     background-size: 60%;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.4),
+        rgba(255, 255, 255, 0.4)
+      ),
+      url("../images/nat-about-max.png");
+    background-color: rgb(253, 250, 250);
+    background-size: 30%;
   }
 }
 .about {
@@ -31,8 +37,13 @@
     margin: 650px 80px 80px 80px;
     border-width: 5px;
   }
+  @media all and (min-width: 1024px) {
+    margin: 320px 80px 140px 400px;
+    border-width: 5px;
+  }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    margin: 320px 80px 140px 600px;
+    border-width: 5px;
   }
   &__title {
     display: flex;
@@ -46,7 +57,7 @@
       margin-top: -40px;
     }
     @media all and (min-width: 1200px) {
-      padding-top: 300px;
+      padding: 0 0 0 30px;
     }
     &--h1 {
       font-family: "Kiwi Maru", serif;
@@ -58,7 +69,7 @@
         font-size: 60px;
       }
       @media all and (min-width: 1200px) {
-        padding-top: 300px;
+        font-size: 50px;
       }
     }
     &--icon {
@@ -72,7 +83,7 @@
         font-size: 60px;
       }
       @media all and (min-width: 1200px) {
-        padding-top: 300px;
+        font-size: 50px;
       }
     }
   }
@@ -101,7 +112,10 @@
       margin: 0 0 0 30px;
     }
     @media all and (min-width: 1200px) {
-      padding-top: 300px;
+      width: 160px;
+      height: 35px;
+      font-size: 17px;
+      margin: 0 0 10px 30px;
     }
   }
   &__text {
@@ -121,7 +135,10 @@
       padding: 0 0 0 30px;
     }
     @media all and (min-width: 1200px) {
-      padding-top: 300px;
+      font-size: 20px;
+      line-height: 40px;
+      text-align: justify;
+      padding: 0 300px 0 30px;
     }
   }
 }
