--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,32 +1,49 @@
 .header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 3rem;
-  &__wrapper {
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  //margin-bottom: 3rem;
+  @media all and (min-width: 768px) {
+  }
+  @media all and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-end;
+    background-color: transparent;
   }
-  // &__title {
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: center;
-  //   align-items: center;
-  //   font-family: "Kiwi Maru", serif;
-  //   font-weight: 300;
-  //   font-size: 20px;
-  //   color: black;
-  //   text-align: center;
-  //   margin-top: 26px;
-  //   &--sub {
-  //     font-family: "Open Sans", sans-serif;
-  //     font-weight: 300;
-  //     font-size: 12px;
-  //     color: black;
-  //     text-align: center;
-  //   }
-  // }
+  &__nav2 {
+    display: none;
+    @media all and (min-width: 768px) {
+    }
+    @media all and (min-width: 1200px) {
+      display: inline-block;
+      // position: relative;
+      // z-index: 1001;
+      font-family: "Kiwi Maru", serif;
+      font-size: 25px;
+      color: rgb(226, 175, 128);
+      //line-height: 50px;
+    }
+  }
+  &__title {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    font-family: "Kiwi Maru", serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: black;
+    // text-align: center;
+    // margin-top: 26px;
+    // &--sub {
+    //   font-family: "Open Sans", sans-serif;
+    //   font-weight: 300;
+    //   font-size: 12px;
+    //   color: black;
+    //   text-align: center;
+    // }
+  }
 }
 .hamburger {
   position: absolute;
@@ -51,7 +68,7 @@
     right: 85px;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    display: none;
   }
 }
 .page-projects ._layer {
@@ -96,7 +113,7 @@
     height: 4px;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    //padding-top: 300px;
   }
 }
 .hamburger.is-active .-top {
@@ -137,54 +154,9 @@
     width: 200px;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
+    //padding-top: 300px;
   }
 }
-// .page-about.header__nav {
-//   position: absolute;
-//   top: 60px;
-//   left: 20px;
-//   transform: translate3d(0px, -180%, 0px);
-//   z-index: 1001;
-//   background-color: white;
-//   opacity: 0.8;
-//   width: 180px;
-//   height: 218px;
-//   padding: 5px 0 0 10px;
-//   border-radius: 5px;
-//   border: solid 2px rgb(180, 180, 180);
-//   margin-top: 20px;
-// }
-// .page-projects.header__nav {
-//   position: absolute;
-//   top: 60px;
-//   left: 20px;
-//   transform: translate3d(0px, -180%, 0px);
-//   z-index: 1001;
-//   background-color: white;
-//   //opacity: 0.8;
-//   width: 180px;
-//   height: 218px;
-//   padding: 5px 0 0 10px;
-//   border-radius: 5px;
-//   border: solid 2px rgb(180, 180, 180);
-//   margin-top: 20px;
-// }
-// .page-contact.header__nav {
-//   position: absolute;
-//   top: 60px;
-//   left: 20px;
-//   transform: translate3d(0px, -180%, 0px);
-//   z-index: 1001;
-//   background-color: white;
-//   //opacity: 0.8;
-//   width: 180px;
-//   height: 218px;
-//   padding: 5px 0 0 10px;
-//   border-radius: 5px;
-//   border: solid 2px rgb(180, 180, 180);
-//   margin-top: 20px;
-// }
 .header__nav ul li a {
   font-family: "Kiwi Maru", serif;
   font-size: 25px;
@@ -195,6 +167,5 @@
     line-height: 60px;
   }
   @media all and (min-width: 1200px) {
-    padding-top: 300px;
   }
 }
