--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header">
-  <!-- <h1 class="header__title">Natalia Migallón</h1> -->
+  <img class="header__logo" src="./assets/images/favicon-nat-beige.png" alt="Logo Natalia Migallón">
+  <h1 class="header__title">Natalia Migallón</h1>
   <div class="hamburger">
     <div class="_layer -top"></div>
     <div class="_layer -mid"></div>
@@ -30,26 +31,28 @@
       </li>
     </ul>
   </nav>
-  <nav class="header__nav2">
-    <ul>
-      <li>
-        <a class="header__nav2--home" href="./index.html" title="home">Home</a>
+  <nav class="header-navbar">
+    <ul class="navbar">
+      <li class="navbar__element">
+        <a class="navbar__element--text" href="./index.html" title="home"
+          >Home</a
+        >
       </li>
-      <li>
-        <a class="header__nav2--about" href="./about.html" title="Sobre mí"
+      <li class="navbar__element">
+        <a class="navbar__element--text" href="./about.html" title="Sobre mí"
           >Sobre mí</a
         >
       </li>
-      <li>
+      <li class="navbar__element">
         <a
-          class="header__nav2--projects"
+          class="navbar__element--text"
           href="./projects.html"
           title="Proyectos"
           >Proyectos</a
         >
       </li>
-      <li>
-        <a class="header__nav2--contact" href="./contact.html" title="Contacto"
+      <li class="navbar__element">
+        <a class="navbar__element--text" href="./contact.html" title="Contacto"
           >Contacto</a
         >
       </li>
