--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   text-align: center;
   color: white;
   padding: 12px;
@@ -25,6 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    text-align: center;
     .icons {
       font-size: 30px;
       color: white;
@@ -55,9 +57,11 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   text-align: center;
   padding: 12px;
   height: 20%;
+  bottom: 0;
   @media all and (min-width: 768px) {
     padding: 22px;
   }
