Add media query for desktop in projects page

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -69,6 +69,78 @@
     }
   }
 }
+.page-contact .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  @media all and (min-width: 768px) {
+  }
+  @media all and (min-width: 1200px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: white;
+    height: 75px;
+  }
+  &__logo {
+    position: absolute;
+    top: 28px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    @media all and (min-width: 768px) {
+    }
+    @media all and (min-width: 1200px) {
+      top: 24px;
+      left: 200px;
+    }
+  }
+  &__title {
+    display: none;
+    @media all and (min-width: 768px) {
+    }
+    @media all and (min-width: 1200px) {
+      position: absolute;
+      left: 250px;
+      top: 18px;
+      display: inline-block;
+      font-family: "Kiwi Maru", serif;
+      font-weight: 500;
+      font-size: 25px;
+      color: rgb(21, 218, 208);
+      padding-right: 50px;
+    }
+  }
+  & .navbar {
+    @media all and (min-width: 768px) {
+    }
+    @media all and (min-width: 1200px) {
+    }
+    &__element {
+      display: none;
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1200px) {
+        display: inline-block;
+        position: relative;
+        margin: 0 8px;
+        top: 20px;
+        right: 200px;
+      }
+      &--text {
+        // display: none;
+        @media all and (min-width: 768px) {
+        }
+        @media all and (min-width: 1200px) {
+          padding: 8px 16px;
+          font-family: "Open Sans", sans-serif;
+          font-size: 25px;
+          color: rgb(226, 175, 128);
+        }
+      }
+    }
+  }
+}
 .hamburger {
   position: absolute;
   left: 0;
