--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -157,14 +157,14 @@
   background-color: rgb(21, 218, 208);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   text-align: center;
   padding: 12px;
   @media all and (min-width: 768px) {
     padding: 22px;
   }
   @media all and (min-width: 1200px) {
-    //padding-top: 300px;
+    bottom: 0;
   }
   // &__contact {
   //   font-family: "Kiwi Maru", serif;
