--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -182,4 +182,19 @@
       letter-spacing: 2px;
     }
   }
+  &__arrow {
+    font-size: 30px;
+    color: rgb(21, 218, 208);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 20px;
+    @media all and (min-width: 768px) {
+      font-size: 37px;
+    }
+    @media all and (min-width: 1200px) {
+      font-size: 50px;
+      margin-right: 200px;
+    }
+  }
 }
