--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -99,6 +99,8 @@
     font-weight: 600;
     letter-spacing: 2px;
     color: rgb(255, 255, 255);
+    text-decoration: none;
+    list-style-type: none;
     padding: 0 0 3px 0;
     margin: 0 25px 18px 15px;
     cursor: pointer;
