--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .page-projects {
   background-color: #fff;
   background-image: linear-gradient(#f6f6f6 0.1em, transparent 0.1em);
